--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "particles-bg": "^2.5.5",
     "react": "^17.0.2",
     "react-apexcharts": "1.3.7",
-    "react-bootstrap": "1.3.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.1",
     "react-router-dom": "^6.3.0",
